testing/stage_12/valid/expression_char.c
int main() {
    char c='c';
	char a='a';
	c=c-a;
	return c;
}

