testing/stage_12/invalid/bad_string_decl.c
int main()
{
	char* ="hello";
	return 0;
}